fix: adjust sidebar height and add overflow for router outlet

--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -1,6 +1,7 @@
 :host {
     display: block;
-    height: 100vh;
+    height: 100%;
+    width: 100%;
   }
   
   .sidebar {
@@ -202,4 +203,5 @@
     margin-left: 70px;
     height: 100vh;
     background-color: var(--light-color);
+    overflow: auto;
   }
